--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="header">
         <h1>S4ann <span>AI Chatbot.</span></h1>
         <div class="social-media">
-            <a href="https://github.com/S4annn"><i class="fa-brands fa-github"></i></a>
-            <a href="https://instagram.com/sndyytp_"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/sandy-teuku-pranata-94939930b/?originalSubdomain=id"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://github.com"><i class="fa-brands fa-github"></i></a>
+            <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
     </div>
     <div class="container">
